--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,5 +1,6 @@
 @import 'mixins/reset';
 @import 'mixins/mixin';
+@import 'mixins/utilities';
 #app
 {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -43,16 +44,25 @@
 
         width: 100%;
         height: 60px;
+        padding: 13px 30px;
 
+        background-color: #fff;
         box-shadow: 0 2px 5px rgba(0,0,0,.02);
     }
     .main-container
     {
         overflow-x: hidden;
 
-        padding-top: 60px;
+        padding: 80px 20px 20px;
 
         background-color: #f5f5f5;
+         > .content
+        {
+            background-color: #fff;
+            box-shadow: 0 2px 4px 0 #ddd;
+            padding: 20px;
+            min-height: 500px;
+        }
     }
     .page-footer
     {
@@ -63,6 +73,6 @@
         height: 40px;
         margin: 0 auto;
 
-        background-color: #f9f9f9;
+        background-color: #fff;
     }
 }
